[project]
name = "adress-labels"
version = "0.1.0"
description = "Generate printable Word address labels from an Excel file."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
